rpi5/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  template:
    metadata:
      name: radarr
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.12.2@sha256:e0045d420eaf298a9449e12ed1cce654f171cc1043311f0f1cadaf2afeabe795
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              memory: 1Gi
          livenessProbe:
            httpGet:
              port: 7878
              path: /ping
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 7878
              path: /ping
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /data
            server: 192.168.1.52
            readOnly: false
        - name: tarsnapper-config
          configMap:
            name: tarsnapper-config
        - name: backup-key
          secret:
              secretName: backup-key
        - name: backup-tmpdir
          emptyDir:
            medium: Memory
        - name: tarsnap-cache
          emptyDir: { }
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
